# tree

./: .gitignore  BUILTIN_FUNCTIONS.md  CMakeLists.txt  Makefile  README.md  TREE_LANGUAGE.md  main.c  pkgtree.tree  pkgtree_runtime.c  pkgtree_runtime.h  test_packages.tree  tree.pkg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-single-platform.yml
build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  tree.pkg
build-linux-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-wsl/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
examples/: demo.tree
repo/: MANIFEST.tree
repo/pkg/: build@1.0.tree  cli@1.0.tree  core@1.0.tree  data@1.0.tree  fs@1.0.tree  json@1.0.tree  mathx@1.0.tree  net@1.0.tree  project@1.0.tree  text@1.0.tree  toml@1.0.tree
